Fix issues with navigation to anchors + some layout issues

--- a/v2/output2/css/stylev2.css
+++ b/v2/output2/css/stylev2.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Amiri', serif!important;
     font-size: 1.2rem;
-    overflow: auto;
+    overflow: hidden;
 }
 html, body {
   height: 100%;
@@ -20,7 +20,7 @@ html, body {
 }
 
 .book-body {
-    height: 100%;
+    height: 90%;
     direction: rtl;
     overflow-y: scroll;
 }
@@ -95,7 +95,7 @@ select {
     overflow-y: auto;
     margin-right: -300px;
     width: 0;
-    height: 90%;
+    height: 100%;
 
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
